--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "broccoli",
   "version": "0.0.1",
   "description": "",
-  "main": "broccoli.js",
+  "main": "libs/main.js",
   "scripts": {
     "test": "mocha --ui tdd ./tests/"
   },
@@ -19,6 +19,7 @@
   "dependencies": {
     "es6-promise": "^3.0.2",
     "glob": "^5.0.14",
+    "iterate79": "0.0.1",
     "markdown": "^0.5.0",
     "mkdirp": "^0.5.1",
     "phpjs": "^1.3.2"
