--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "es6-promise": "^3.0.2",
     "glob": "^5.0.14",
+    "htmlparser": "^1.7.7",
     "iterate79": "0.0.1",
     "markdown": "^0.5.0",
     "mkdirp": "^0.5.1",
