--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "iterate79": "0.0.1",
     "markdown": "^0.5.0",
     "mkdirp": "^0.5.1",
-    "phpjs": "^1.3.2"
+    "phpjs": "^1.3.2",
+    "twig": "^0.8.2"
   },
   "devDependencies": {
     "mocha": "^2.1.0"
