--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "markdown": "^0.5.0",
     "mkdirp": "^0.5.1",
     "phpjs": "^1.3.2",
-    "twig": "^0.8.2"
+    "twig": "^0.8.2",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "mocha": "^2.1.0"
