--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "htmlparser": "^1.7.7",
     "iterate79": "0.0.1",
     "markdown": "^0.5.0",
+    "marked": "0.3.*",
     "mkdirp": "^0.5.1",
     "phpjs": "^1.3.2",
     "twig": "^0.8.2",
