--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "baobab-fw": "git://github.com/tomk79/BaobabFW.git",
+    "bootstrap": "^3.3.5",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-browserify": "^0.5.1",
