--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tomk79/broccoli.git"
+    "url": "git+https://github.com/pickles2/broccoli-html-editor.git"
   },
   "author": "Tomoya Koyanagi",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/tomk79/broccoli/issues"
+    "url": "https://github.com/pickles2/broccoli-html-editor/issues"
   },
-  "homepage": "https://github.com/tomk79/broccoli#readme",
+  "homepage": "https://github.com/pickles2/broccoli-html-editor#readme",
   "dependencies": {
     "cheerio": "^0.19.0",
     "es6-promise": "^3.0.2",
