(composer.json の パッケージ名 を更新)

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "tomk79/broccoli",
+    "name": "tomk79/broccoli-html-editor",
     "description": "",
     "keywords": ["pickles"],
     "license": "MIT",
