--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "mkdirp": "^0.5.1",
     "phpjs": "^1.3.2",
     "twig": "^0.8.2",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "utils79": "0.0.1-alpha.1"
   },
   "devDependencies": {
     "baobab-fw": "git://github.com/tomk79/BaobabFW.git",
