レンダリングされたプレビュー画面中にあるa要素とform要素の動作を無効化する処理を追加

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "GUI HTML Editor Library.",
   "main": "libs/main.js",
   "scripts": {
+    "start":"gulp watch",
     "up": "node ./node_modules/baobab-fw/lib/cmd/server.js",
     "test": "mocha --ui tdd ./tests/"
   },
