--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "broccoli-html-editor",
-  "version": "0.1.0-beta.2",
+  "version": "0.1.0-beta.2+nb",
   "description": "GUI HTML Editor Library.",
   "main": "libs/main.js",
   "scripts": {
