--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "GUI HTML Editor Library.",
   "main": "libs/main.js",
   "scripts": {
+    "preinstall": "git submodule update -i -r -f",
     "start":"gulp watch",
-    "up": "node ./node_modules/baobab-fw/lib/cmd/server.js",
+    "up": "node ./tests/biflora/server.js",
+    "submodules-update": "rm -rfv node_modules/node-biflora; npm install; gulp;",
     "test": "mocha --ui tdd ./tests/"
   },
   "repository": {
@@ -35,7 +37,7 @@
     "utils79": "0.0.1-alpha.1"
   },
   "devDependencies": {
-    "baobab-fw": "git://github.com/tomk79/BaobabFW.git",
+    "biflora": "file:submodules/node-biflora",
     "bootstrap": "^3.3.5",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^2.3.1",
@@ -50,7 +52,7 @@
     "jquery": "^2.1.4",
     "mocha": "^2.1.0"
   },
-  "baobabConfig": {
+  "bifloraConfig": {
     "defaultPort": 8088,
     "frontendDocumentRoot": "./tests/testdata/htdocs/",
     "backendJs": "./tests/baobab/backend/main.js",
