--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "phpjs": "^1.3.2",
     "twig": "^0.8.2",
     "underscore": "^1.8.3",
+    "url-parse": "^1.1.1",
     "utils79": "0.0.1-alpha.1"
   },
   "devDependencies": {
