broccoli-html-editor@0.1.0-beta.9
- editWindow 上で、moduleフィールドとloopフィールドの並べ替えができるようになった。
- Ace Editor を自然改行されるように設定した。
- Ace Editor で、書式に応じてテーマが変わるようにした。
- Ace Editor の文字サイズを最適化。
- 編集保存中のアニメーション追加。

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "broccoli-html-editor",
-  "version": "0.1.0-beta.9+nb",
+  "version": "0.1.0-beta.9",
   "description": "GUI HTML Editor Library.",
   "main": "libs/main.js",
   "scripts": {
