--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "gulp watch",
     "up": "node ./tests/biflora/server.js",
+    "submodules-update": "rm -rfv node_modules/px2style; npm install; gulp;",
     "test": "mocha --ui tdd ./tests/"
   },
   "repository": {
@@ -49,6 +50,7 @@
     "gulp-twig": "^0.3.0",
     "gulp-uglify": "^1.2.0",
     "jquery": "^2.2.3",
-    "mocha": "^2.1.0"
+    "mocha": "^2.1.0",
+    "px2style": "file:submodules/px2style"
   }
 }
