resourceMgr に、JPEG, PNG 画像の自動ロスレス圧縮機能を追加

--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "fs-extra": "^0.24.0",
     "glob": "^5.0.14",
     "htmlparser": "^1.7.7",
+    "imagemin": "4.*",
+    "imagemin-jpegtran": "^4.*",
+    "imagemin-optipng": "^4.*",
     "iterate79": "0.0.1",
     "markdown": "^0.5.0",
     "marked": "0.3.*",
