--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "twig": "^0.8.2",
     "underscore": "^1.8.3",
     "url-parse": "^1.1.1",
-    "utils79": "0.0.1-alpha.2"
+    "utils79": "^0.0.1"
   },
   "devDependencies": {
     "biflora": "0.0.1-alpha.1",
