--- a/appveyor.yml
+++ b/appveyor.yml
@@ -73,6 +73,7 @@ install:
   # Get the latest stable version of Node.js or io.js
   - ps: Install-Product node $env:nodejs_version
   # install modules
+  - git submodule update --init --recursive --force
   - npm install
 
 
