クライアントサイドの新しいオプション `lang` を追加。

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "imagemin-pngquant": "^4.*",
     "iterate79": "^0.1.0",
     "jquery": "^2.2.3",
+    "langbank": "0.0.2",
     "markdown": "^0.5.0",
     "marked": "0.3.*",
     "mkdirp": "^0.5.1",
