--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/pickles2/broccoli-html-editor#readme",
   "dependencies": {
     "cheerio": "^0.19.0",
+    "ejs": "^2.5.2",
     "es6-promise": "^3.0.2",
     "fs-extra": "^0.24.0",
     "glob": "^5.0.14",
