--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ node_js:
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install python-software-properties -qq
-  - sudo add-apt-repository ppa:ondrej/php5-5.6 -y
+  - sudo add-apt-repository ppa:ondrej/php5-oldstable -y
   - sudo apt-get update -qq
   - sudo apt-get install -qq php5 php5-sqlite
   - php -v
