--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ node_js:
   - "4.2"
 
 before_script:
-  - git submodule update --init --recursive --force
+  # - git submodule update --init --recursive --force
   - npm install
 
 script:
