broccoli-html-editor@0.1.0
- Node.js 0.x , io.js のサポートを中止。
- `broccoli.buildModuleCss()` が、SASSが使えない環境で異常終了する問題を修正。
- モジュールにscriptタグが含まれる場合に、編集画面では無効にするようになった。
- editWindow 内の moduleフィールドに「モジュールパレットから追加」ができるようになった。
- インスタンスのカット機能追加。
- インスタンスの範囲選択機能追加。
- その他幾つかの細かい修正。

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "broccoli-html-editor",
-  "version": "0.1.0-beta.12+nb",
+  "version": "0.1.0",
   "description": "GUI HTML Editor Library.",
-  "private": true,
+  "private": false,
   "main": "libs/main.js",
   "scripts": {
     "start": "gulp watch",
