broccoli-html-editor v0.2.0
- クライアントサイドに `clipboard.set()`, `clipboard.get()` オプションを追加。
- インスタンス編集後の保存時に、処理の進捗状況を伝えるようになった。
- imageフィールドがファイル名の重複をチェックするようになった。
- imageフィールドの JPEG, PNG 画像の自動ロスレス圧縮機能を削除。圧縮に著しく時間がかかり、作業効率を下げるため。
- moduleフィールド、 loopフィールドに `maxLength` を追加。
- moduleフィールドに `enabledChildren` を、モジュールの `info.json` 仕様に `enabledParents`, `enabledBowls` を追加。親子関係の定義ができるようになった。
- 画像等のリソースが増えるとUIが重くなるパフォーマンス上の問題を改善。
- finalize.js の第3引数 `supply` に `data` を追加。モジュールに入力されたデータ構造にアクセスできるようになった。
- `elseif`、 `else` フィールドを追加。
- その他幾つかの細かい修正。

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "broccoli-html-editor",
-  "version": "0.1.1-alpha.1+nb",
+  "version": "0.2.0",
   "description": "GUI HTML Editor Library.",
-  "private": true,
+  "private": false,
   "main": "libs/main.js",
   "scripts": {
     "start": "gulp watch",
