--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "require": {
         "php": ">=5.4.0",
         "tomk79/filesystem": "^1.0",
-        "tomk79/langbank": "^0.0.3"
+        "tomk79/langbank": "^0.0.3",
+        "michelf/php-markdown": "^1.8"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.1.0"
