php: buildBowl の移植中...

--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
             "php/resourceMgr.php",
             "php/classModule.php",
             "php/buildModuleResources.php",
+            "php/buildBowl.php",
             "fields/php/href.php",
             "fields/php/html_attr_text.php",
             "fields/php/html.php",
