--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "broccoli-html-editor",
-  "version": "0.3.1",
+  "version": "0.3.2-alpha.1+nb",
   "description": "GUI HTML Editor Library.",
-  "private": false,
+  "private": true,
   "main": "libs/main.js",
   "scripts": {
     "start": "gulp watch",
