(CIのテストをNodeJSからPHPに移行)

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,19 +8,12 @@ os: Windows Server 2012 R2
 version: "{build}-{branch}"
 
 # Set a known clone folder
-clone_folder: C:\projects\myproject
+clone_folder: C:\projects\broccoliHtmlEditor
 
 # environments
 environment:
   oauthtoken:
     secure: L7aFaHhJkScePf7T8vMrHn3xtwObmwfSjy36tXMOpb7qY8LXpSeieA6xx1oKiBk9
-  matrix:
-    - nodejs_version: "4.6"
-    - nodejs_version: "5.12"
-    - nodejs_version: "6.9"
-    - nodejs_version: "7.8"
-    # - nodejs_version: "8.9"
-    # - nodejs_version: "9.4"
 
 # branches
 branches:
@@ -37,21 +30,44 @@ init:
 
 # Install scripts
 install:
-  - cd C:\projects\myproject
+  ## Set PHP.
+  - ps: Set-Service wuauserv -StartupType Manual
+  - cinst php --version 7.1.3 -y
+  - SET PATH=C:\tools\php71\;%PATH%
+  - cd C:\tools\php71
+  - copy php.ini-production php.ini
+  - echo date.timezone="Asia/Tokyo" >> php.ini
+  - echo extension_dir=ext >> php.ini
+  - echo extension=php_openssl.dll >> php.ini
+  - echo extension=php_gd2.dll >> php.ini
+  - echo extension=php_mbstring.dll >> php.ini
+  - echo extension=php_curl.dll >> php.ini
+  - echo extension=php_xsl.dll >> php.ini
+  - echo extension=php_intl.dll >> php.ini
+  - echo extension=php_pdo_sqlite.dll >> php.ini
+  - echo output_buffering = Off >> php.ini
+  - echo default_charset = UTF-8 >> php.ini
+  - echo mbstring.language = Japanese >> php.ini
+  - echo mbstring.encoding_translation = On >> php.ini
+  - echo mbstring.http_input = UTF-8 >> php.ini
+  - echo mbstring.http_output = pass >> php.ini
+  - echo mbstring.internal_encoding = UTF-8 >> php.ini
 
-  # Get the latest stable version of Node.js or io.js
-  - ps: Install-Product node $env:nodejs_version
-  # install modules
-  - npm install
+  - php -v
+  - where php
 
 
-# Post-install test scripts.
+  ## Set Composer.
+  - cd C:\projects\broccoliHtmlEditor
+  - php -r "readfile('https://getcomposer.org/installer');" | php
+  - php composer.phar --version
+  - php composer.phar config -g github-oauth.github.com %oauthtoken%
+
+
+
 build_script:
-  # Output useful info for debugging.
-  - node --version
-  - npm --version
-  # run tests
-  - npm test
+  - php composer.phar install
+  - php vendor\phpunit\phpunit\phpunit
 
 
 
