--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,24 @@
-language: node_js
+os:
+  - linux
 
-node_js:
-  # - "9.4"
-  # - "8.9"
-  - "7.8"
-  - "6.9"
-  - "5.1"
-  - "4.2"
+language: php
+
+php:
+  - "7.2"
+  - "7.1"
+  - "7.0"
+  - "5.6"
+  - "5.5"
+  - "5.4"
+
+before_install:
+  - composer selfupdate
 
 before_script:
-  - npm install
+  - composer install
 
 script:
-  - npm test
+  - ./vendor/phpunit/phpunit/phpunit
 
 notifications:
   emails:
