初期起動時のパフォーマンスを向上した。
GPI に getBootupInfomations を追加し、 複数回に分けて取得していた情報を1回で受け取るようにした。

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "gulp watch",
     "up": "node ./tests/biflora/server.js",
     "submodules-update": "npm install; gulp;",
+    "preview": "gulp preview;",
     "test": "mocha --ui tdd ./tests/"
   },
   "repository": {
