編集ウィンドウで、入力エラーがある場合のエラーメッセージ表示を改善。

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,9 @@
             "php ./vendor/phpunit/phpunit/phpunit"
         ]
     } ,
+    "config": {
+        "process-timeout": 0
+    },
     "minimum-stability": "stable",
     "prefer-stable": true,
     "repositories": [
