broccoli-html-editor v0.3.10
- PHP 7.3 で発生する不具合を修正。
- タッチ端末での操作性を改善。
- プレビューの読み込みに 30秒以上かかる場合、タイムアウトを発生させて強制的に編集画面へ移行するようになった。
- コピー・アンド・ペースト操作に関する問題の修正。
- その他いくつかのUI改善。

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "broccoli-html-editor",
-  "version": "0.3.10-alpha.1+dev",
+  "version": "0.3.10",
   "description": "GUI HTML Editor Library.",
-  "private": true,
+  "private": false,
   "main": "libs/main.js",
   "scripts": {
     "start": "node ./tests/biflora/server.js",
