--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "broccoli-html-editor",
-  "version": "0.3.10",
+  "version": "0.3.11-alpha.1+dev",
   "description": "GUI HTML Editor Library.",
   "private": false,
   "main": "libs/main.js",
@@ -28,7 +28,7 @@
     "fs-extra": "^0.24.0",
     "glob": "^5.0.14",
     "htmlparser": "^1.7.7",
-    "iterate79": "^0.1.0",
+    "iterate79": "^1.1.1",
     "jquery": "^2.2.3",
     "langbank": "0.0.2",
     "markdown": "^0.5.0",
@@ -39,7 +39,7 @@
     "twig": "^0.8.2",
     "underscore": "^1.9.1",
     "url-parse": "^1.4.7",
-    "utils79": "^0.0.1"
+    "utils79": "^0.0.5"
   },
   "devDependencies": {
     "biflora": "0.0.1-alpha.1",
