broccoli-html-editor v0.3.11
- ドラッグ＆ドロップでインスタンスを移動したあとに、選択の状態が不自然な挙動になる場合がある問題を修正。
- その他の細かい不具合の修正。

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "broccoli-html-editor",
-  "version": "0.3.11-alpha.1+dev",
+  "version": "0.3.11",
   "description": "GUI HTML Editor Library.",
   "private": false,
   "main": "libs/main.js",
