<PHP> Twig 3.0 系に対応。

--- a/composer.json
+++ b/composer.json
@@ -30,9 +30,9 @@
     "require": {
         "php": ">=5.4.0",
         "tomk79/filesystem": "^1.0",
-        "tomk79/langbank": "^0.0.3",
+        "tomk79/langbank": "^0.0.4",
         "michelf/php-markdown": "^1.8",
-        "twig/twig": "^1.35",
+        "twig/twig": ">=1.35",
         "leafo/scssphp": "^0.7.6"
     },
     "require-dev": {
@@ -56,6 +56,7 @@
             "fields/php/script.php",
             "fields/php/select.php",
             "fields/php/text.php",
+            "php/helper/twig.php",
             "php/simple_html_dom.php"
         ]
     }
