--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "broccoli-html-editor",
-  "version": "0.3.12-alpha.1+dev",
-  "private": true,
+  "version": "0.3.12",
+  "private": false,
   "description": "GUI HTML Editor Library.",
   "main": "libs/main.js",
   "scripts": {
