--- a/composer.json
+++ b/composer.json
@@ -57,6 +57,7 @@
             "fields/php/select.php",
             "fields/php/text.php",
             "php/helper/twig.php",
+            "php/helper/readme.php",
             "php/simple_html_dom.php"
         ]
     }
