新しいフィールド `color`、 `date`、 `time`、 `datetime` を追加。

--- a/composer.json
+++ b/composer.json
@@ -56,6 +56,10 @@
             "fields/php/script.php",
             "fields/php/select.php",
             "fields/php/text.php",
+            "fields/php/color.php",
+            "fields/php/date.php",
+            "fields/php/time.php",
+            "fields/php/datetime.php",
             "php/fncs/readme.php",
             "php/helper/twig.php",
             "php/simple_html_dom.php"
