--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "gulp-uglify": "^1.2.0",
     "md5": "^2.2.1",
     "mocha": "^2.1.0",
-    "px2style": "^2.0.5",
+    "px2style": "git+https://github.com/pickles2/px2style.git#develop",
     "validatorjs": "^3.18.1"
   }
 }
