--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "utils79": "^0.0.5"
   },
   "devDependencies": {
+    "@simonwep/pickr": "^1.7.1",
     "biflora": "0.0.1-alpha.1",
     "bootstrap": "^3.4.1",
     "gulp": "^4.0.2",
@@ -51,6 +52,7 @@
     "gulp-plumber": "^1.2.1",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.5",
     "gulp-twig": "^0.3.0",
     "gulp-uglify": "^1.2.0",
     "md5": "^2.2.1",
