broccoli-html-editor v0.4.5
- UIの改善: レイアウトビュー上の、編集領域のない箇所をクリックして、インスタンスの選択を解除できるようになった。
- UIの改善: モーダルボックスのサイズを調整した。
- 同一オリジンで動作する環境では、プレビューHTMLに `data-broccoli-receive-message` スクリプトを埋め込む必要がなくなった。(クロスオリジンの場合は従来どおり)
- ショートカットキー (macOS では `Cmd + A`、Windows では `Ctrl + A`) でインスタンスの全選択ができるようになった。
- コンテキストメニューから新規モジュール追加ダイアログを利用できるようになった。
- fileフィールドを追加。
- imageフィールドで、セットされた画像を 名前を付けて保存 できるようになった。
- インスタンスを検索できるようになった。
- その他、細かい不具合の修正と安定性の向上。

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "broccoli-html-editor",
-  "version": "0.4.4",
+  "version": "0.4.5",
   "private": false,
-  "description": "GUI HTML Editor Library.",
+  "description": "Block Editor Library.",
   "main": "libs/main.js",
   "scripts": {
     "start": "node ./tests/biflora/server.js",
