--- a/.travis.yml
+++ b/.travis.yml
@@ -15,14 +15,22 @@ php:
   - "5.5"
   - "5.4"
 
+
+env:
+  - NOTE_RELEASE=7.x
+
 before_install:
   - composer selfupdate
+  - sudo rm -rf ~/.nvm - curl -sL "https://deb.nodesource.com/setup_${NODE_RELEASE}" | sudo -E bash -
+  - sudo apt-get install -y nodejs
 
 before_script:
   - composer install
+  - npm install
 
 script:
   - ./vendor/phpunit/phpunit/phpunit
+  - npm run testcafe
 
 notifications:
   emails:
