broccoli-html-editor v0.5.0
- モジュール、カテゴリ、パッケージの情報に `hidden` を追加。
- UIの改善: 編集ウィンドウの右上に 閉じるボタン を追加。
- パネルが、実際の要素の座標からずれて表示されてしまう場合にも、最新の座標情報を取得しなおして補正するようになった。
- モジュールの README が、多言語版を定義できるようになった。
- 内部コードに関する変更: browserify から webpack へ移行した。
- Windows版 Chrome 96 で、モジュールパレットからモジュールを追加できない不具合を修正。
- 一部画面要素の英語対応。

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "config": {
         "process-timeout": 0
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "repositories": [
     ],
     "require": {
