add: twig-loader

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "mocha": "^2.1.0",
     "px2style": "git+https://github.com/pickles2/px2style.git#develop",
     "testcafe": "^1.17.1",
+    "twig-loader": "^0.5.5",
     "validatorjs": "3.18.1",
     "webpack": "^4.39.2",
     "webpack-stream": "^5.2.1"
