--- a/composer.json
+++ b/composer.json
@@ -34,10 +34,7 @@
         "tomk79/langbank": "^0.1.0||^0.0.4",
         "michelf/php-markdown": ">=1.8",
         "twig/twig": ">=1.35",
-        "leafo/scssphp": ">=0.7.6"
-    },
-    "suggest": {
-        "scssphp/scssphp": "This is the successor package to \"leafo/scssphp\"."
+        "scssphp/scssphp": ">=1.4"
     },
     "require-dev": {
         "phpunit/phpunit": "~9.5"
