--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
   "scripts": {
     "start": "node ./tests/biflora/server.js",
     "up": "node ./tests/biflora/server.js",
-    "submodules-update": "npm install; gulp;",
-    "watch": "gulp watch;",
-    "dev": "gulp;",
-    "prod": "gulp;",
-    "preview": "gulp preview;",
+    "preview": "open \"http://127.0.0.1:8088/\"",
+    "dev": "npm run development",
+    "development": "mix",
+    "watch": "mix watch",
+    "watch-poll": "mix watch -- --watch-options-poll=1000",
+    "hot": "mix watch --hot",
+    "prod": "npm run production",
+    "production": "mix --production",
     "test": "mocha --ui tdd ./tests/",
     "testcafe": "./node_modules/.bin/testcafe firefox:headless ./tests/testcafe/mainTest.js --skip-js-errors --app \"php -S 127.0.0.1:8088 -t ./\""
   },
@@ -33,35 +36,39 @@
     "glob": "^5.0.14",
     "htmlparser": "^1.7.7",
     "iterate79": "^1.1.1",
-    "jquery": "^3.4.1",
+    "jquery": "^3.6.0",
     "langbank": "^0.1.0",
-    "marked": "^1.1.0",
+    "marked": "^4.0.12",
     "mkdirp": "^0.5.1",
-    "node-sass": "^4.12.0",
     "phpjs": "^1.3.2",
+    "sass": "^1.49.9",
     "twig": "^1.10.5",
     "underscore": "^1.9.1",
     "url-parse": "^1.4.7",
     "utils79": "^0.0.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.8",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
     "@simonwep/pickr": "^1.8.2",
+    "axios": "^0.25",
+    "babel-loader": "^8.2.4",
     "biflora": "0.0.1-alpha.1",
     "bootstrap": "^3.4.1",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^2.3.1",
-    "gulp-minify-css": "^1.2.1",
-    "gulp-plumber": "^1.2.1",
-    "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.5",
+    "cheerio": "*",
+    "csv-loader": "^3.0.3",
+    "langbank": "github:tomk79/node-langbank.git#develop",
+    "laravel-mix": "^6.0.48",
     "md5": "^2.2.1",
     "mocha": "^2.1.0",
-    "px2style": "git+https://github.com/pickles2/px2style.git#develop",
+    "postcss": "^8.1.14",
+    "px2style": "github:pickles2/px2style#develop",
+    "raw-loader": "^4.0.2",
+    "resolve-url-loader": "^5.0.0",
+    "sass-loader": "^12.6.0",
     "testcafe": "^1.17.1",
     "twig-loader": "^0.5.5",
-    "validatorjs": "3.18.1",
-    "webpack": "^4.39.2",
-    "webpack-stream": "^5.2.1"
+    "validatorjs": "3.18.1"
   }
 }
