--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "htmlparser": "^1.7.7",
     "iterate79": "^1.1.1",
     "jquery": "^3.6.0",
-    "langbank": "^0.1.0",
+    "langbank": "github:tomk79/node-langbank.git#develop",
     "marked": "^4.0.12",
     "mkdirp": "^0.5.1",
     "phpjs": "^1.3.2",
@@ -58,7 +58,6 @@
     "bootstrap": "^3.4.1",
     "cheerio": "*",
     "csv-loader": "^3.0.3",
-    "langbank": "github:tomk79/node-langbank.git#develop",
     "laravel-mix": "^6.0.48",
     "md5": "^2.2.1",
     "mocha": "^2.1.0",
@@ -67,6 +66,7 @@
     "raw-loader": "^4.0.2",
     "resolve-url-loader": "^5.0.0",
     "sass-loader": "^12.6.0",
+    "stream-browserify": "^2.0.2",
     "testcafe": "^1.17.1",
     "twig-loader": "^0.5.5",
     "validatorjs": "3.18.1"
