--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
         "scssphp/scssphp": ">=1.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "~9.5"
+        "phpunit/phpunit": "~9.5",
+        "tomk79/request": "^1.3"
     },
     "autoload": {
         "psr-4": {
