--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "ext-json": "*",
         "ext-mbstring": "*",
         "tomk79/filesystem": "^1.0",
-        "tomk79/langbank": "^0.2.0||^0.1.0||^0.0.4",
+        "tomk79/langbank": "^0.3.0||^0.2.0||^0.1.0||^0.0.4",
         "michelf/php-markdown": ">=1.8",
         "twig/twig": ">=1.35",
         "scssphp/scssphp": ">=1.4"
