--- a/.gitattributes
+++ b/.gitattributes
@@ -6,6 +6,7 @@
 /.gitignore             export-ignore
 /.travis.yml            export-ignore
 /appveyor.yml           export-ignore
+/docs                   export-ignore
 /tests                  export-ignore
 /phpunit.xml            export-ignore
 /client/src             export-ignore
