--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -3,5 +3,7 @@
     "/client/dist/broccoli-preview-contents.js": "/client/dist/broccoli-preview-contents.js",
     "/tests/testdata/htdocs/index_files/main.js": "/tests/testdata/htdocs/index_files/main.js",
     "/client/dist/themes/darkmode.css": "/client/dist/themes/darkmode.css",
+    "/client/dist/themes/lightmode.css": "/client/dist/themes/lightmode.css",
+    "/client/dist/themes/auto.css": "/client/dist/themes/auto.css",
     "/client/dist/broccoli.css": "/client/dist/broccoli.css"
 }
