--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "homepage": "https://github.com/broccoli-html-editor/broccoli-html-editor#readme",
   "dependencies": {
-    "cheerio": "^0.19.0",
+    "cheerio": "0.22.0",
     "ejs": "^2.6.2",
     "es6-promise": "^3.0.2",
     "fs-extra": "^0.24.0",
@@ -55,7 +55,6 @@
     "axios": "^0.25",
     "babel-loader": "^8.2.4",
     "biflora": "0.0.1-alpha.1",
-    "cheerio": "*",
     "codemirror": "^6.0.1",
     "csv-loader": "^3.0.3",
     "laravel-mix": "^6.0.49",
