--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jquery": "^3.6.0",
     "langbank": "github:tomk79/node-langbank.git#develop",
     "marked": "^4.0.12",
+    "mime-types": "^2.1.35",
     "mkdirp": "^0.5.1",
     "phpjs": "^1.3.2",
     "sass": "^1.49.9",
